--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
-      hi hello what
+      Detecting orientation
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./scripts/motiondetection.js"></script>
   </body>
