--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
       Detecting orientation
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./scripts/motionDetection.js"></script>
+    <script src="./scripts/motiondetection.js"></script>
+    <script src="./serviceWorker.js"></script>
   </body>
 </html>
